<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <com.example.skydash.GameView
        android:id="@+id/gv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:visibility="invisible"
        android:id="@+id/text_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#04006E"
        android:textSize="50sp"
        android:text="0"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/blue"
        android:padding="5dp"
        android:text="@string/btn_start"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"/>

    <Button
        android:id="@+id/btn_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@color/red"
        android:padding="5dp"
        android:text="@string/btn_pause"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />


    <RelativeLayout
        android:id="@+id/rl_game_over"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_game_over"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/txt_game_over"
            android:textColor="@color/dark_red"
            android:textSize="50dp" />

        <TextView
            android:id="@+id/txt_score_over"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:background="#1B350093"
            android:padding="10dp"
            android:text="@string/txt_match_score"
            android:textColor="@color/purple"
            android:textSize="100sp" />

        <TextView
            android:id="@+id/txt_best_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_score_over"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/txt_heighist_score"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_game_over"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/txt_replay"
            android:textColor="@color/red"
            android:textSize="20sp" />




    </RelativeLayout>



</RelativeLayout>